fix issue where hidden midcol hides collapsers

--- a/css/comment-collapser.css
+++ b/css/comment-collapser.css
@@ -37,3 +37,7 @@ body .comment .child {
     opacity: 1;
     cursor: pointer;
 }
+
+body:not(.subscriber) div.commentarea div.midcol {
+  display: block;
+}
